# contact_discrimination

./: .gitignore  CMakeLists.txt  README.md
drake_cmake_installed/: .gitignore  CMakeLists.txt
drake_cmake_installed/src/: CMakeLists.txt
drake_cmake_installed/src/contact_localization/: CMakeLists.txt  gradient_calculator.cc  gradient_calculator.h  iiwa_config.yml  load_mesh.cc  local_minimum_sampler.cc  local_minimum_sampler.h  local_minimum_sampler_py.cc  mesh.cc  mesh.h  osqp_wrapper.cc  osqp_wrapper.h  proximity_wrapper.cc  proximity_wrapper.h  py_local_minimum_sampler.cc  try_autodiff.cc  try_gradient_calculator.cc  try_gradient_decent_on_3link_arm.cc  try_gradient_descent_on_iiwa_link6.cc  try_loading_mesh.cc  try_osqp.cc  try_proximity_wrapper.cc  try_sampling_local_minimum.cc
src/: CMakeLists.txt  iiwa_config.yml  local_minimum_sampler.cc  local_minimum_sampler_py.cc  mesh.cc  osqp_wrapper.h  proximity_wrapper.cc  run_local_minimum_sampler_lcm.cc  try_proximity_wrapper.cc  try_sampling_mesh.cc
